# modelinspect

./: .gitignore  .notes.txt  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties
.github/: RELEASE_TEMPLATE.md
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: black.yml  build-container.yml  codeql.yml  cosign-verify.yml  lint.yml  openssf-scorecard.yml  publish-release.yml  release.yml  sast.yml  sign-verify.yml  sonarqube.yml  tag-release.yml  test-dispatch.yml  test-matrix.yml  test.yml  verify-release.yml  verify.yml
ai_forensics/: ascii.py
docs/analysis/: gguf_analysis.md  safetensor_analysis.md
docs/development/: CONTAINER.md  RELEASE-VERIFY.md  ROADMAP.md  SECURITY-IMPLEMENTATION.md  SOURCE-SIGNING.md  SUPPLYCHAIN.md  WORKFLOWS.md
documentation/: references.md  safetensor_analysis.md
documentation/analysis/: onnx_analysis.md
model_inspect/: __main__.py  cli.py  config.py  logger.py  model_scanner.py
model_inspect/analyzers/zip_file/: __init__.py  constants.py
model_inspect/analyzers/zipfile/: __init__.py
model_inspect/file_types/base_file/: __init__.py  binary_file_base.py
model_inspect/file_types/zip_file/: __init__.py  constants.py  decompression.py  decryption.py  exceptions.py  utils.py  zip_file.py  zip_info.py  zip_reader.py
modelinspect/: __init__.py  __main__.py  cli.py  config.py  logger.py  main.py  zipfile.py
tests/: conftest.py
tests/safetensors/: test_safetensors_numpy_dtypes.py  test_safetensors_numpy_metadata.py  test_safetensors_numpy_shapes.py  test_safetensors_numpy_unsupported_dtypes.py  test_safetensors_torch_dtypes.py  test_safetensors_torch_metadata.py  test_safetensors_torch_shapes.py  test_safetensors_torch_unsupported_dtypes.py
tools/: generate_test_fixtures.py  publish_release.sh  sbom_verify.py  verify_release.py
