[tool.poetry]
name = "modelinspect"
version = "0.1.0"
description = "ModelInspect command-line tool for inspecting AI/ML models."
authors = ["interwebshack <22042209+interwebshack@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "modelinspect" }]
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
click = "^8.1.7"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
mypy = "^1.13.0"
pylint = "^3.3.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modelinspect = "modelinspect.cli:cli"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
